# mi-portfolio-ma2003b

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
case-01-factor-analysis/: README.md
case-01-factor-analysis/data/: CUSTOMER_SATISFACTION_DATA_DICTIONARY.md  DATA_DICTIONARY.md  customer_satisfaction_data.csv
case-01-factor-analysis/notebooks/: Costumer_service.ipynb
case-01-factor-analysis/src/: utils.py
case-02-discriminant-analysis/: README.md
case-02-discriminant-analysis/data/: DATA_DICTIONARY.md  credit_risk_data.csv
case-02-discriminant-analysis/notebooks/: LendSmart_Analysis.ipynb
case-03-cluster-analysis/: README.md
case-03-cluster-analysis/data/: retail_customer_data-1.csv  retail_customer_data_with_labels-1.csv
case-03-cluster-analysis/notebooks/: MegamartClusttetring.ipynb
portfolio-summary/: LESSONS_LEARNED.md  METHODOLOGY_COMPARISON.md  PORTFOLIO_OVERVIEW.md
